loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:8: error: illegal start of simple expression
    if(i<=2);
            ^Poucet1:11: error: illegal start of simple expression
    if(i>=3);
            ^