loopdowhile.Poucet1.scala.code
var c:Int=0
var i:Int=0
while(!exitReached()){
  for(c<-1 to 5){
    forward();
    if (isOverBaggle()){
      i=i+1
    if(i<=2);
      right();
      forward();
    if(i>=3);
      left();
      forward();
    }
  }
}